--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
-  "functions": {
-    "frontend/dist/**": {
-      "maxDuration": 30
-    }
-  },
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "outputDirectory": "frontend/dist",
+  "installCommand": "cd frontend && npm install",
+  "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/frontend/index.html"
+      "destination": "/index.html"
     }
   ]
 }
