--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,7 +4,11 @@
   "installCommand": "npm install",
   "outputDirectory": "dist",
   "framework": "vite",
+  "rootDirectory": "frontend",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
